// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should match snapshot 1`] = `
<div
  className="wrapper"
  data-testid="tooltip-wrapper"
  id="tooltip-wrapper"
  onClick={[Function]}
>
  <div
    className="content-wrapper content-wrapper--static-width"
    data-testid="tooltip"
    id="tooltip"
  >
    <div
      className="content-body"
    >
      <span
        className="icon-wrapper"
      >
        <span
          className="icon icon-close icon-close"
          data-testid="tooltip-icon-close"
          id="tooltip-icon-close"
        />
      </span>
      <div
        className="content-text"
      >
        <span>
          tooltip title
        </span>
        <span>
          tooltip body
        </span>
      </div>
    </div>
  </div>
  Click Me!
</div>
`;

exports[`<Tooltip /> should match snapshot fullwidth 1`] = `
<div
  className="wrapper"
  data-testid="tooltip-wrapper"
  id="tooltip-wrapper"
  onClick={[Function]}
>
  <div
    className="content-wrapper"
    data-testid="tooltip"
    id="tooltip"
    style={
      Object {
        "width": "calc(calc(100vw - 20px) - 20px)",
      }
    }
  >
    <div
      className="content-body"
    >
      <span
        className="icon-wrapper"
      >
        <span
          className="icon icon-close icon-close"
          data-testid="tooltip-icon-close"
          id="tooltip-icon-close"
        />
      </span>
      <div
        className="content-text"
      >
        <span>
          tooltip title
        </span>
        <span>
          tooltip body
        </span>
      </div>
    </div>
  </div>
  Click Me!
</div>
`;
